# raytracing

./: Bitmap.cpp  Bitmap.h  CMakeLists.txt  commit.sh  lights.cpp  lights.h  main.cpp  readme.txt  shapes.cpp  shapes.h  trace_ray.cpp  trace_ray.h  vec3m.cpp  vec3m.h
